--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "buffer": "github:feross/buffer",
+    "jquery": "^3.7.1",
+    "jszip": "^3.10.1",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
+    "leaflet-geoserver-request": "^1.3.0",
+    "leaflet-omnivore": "^0.3.4",
+    "leaflet-providers": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.1",
+    "shpjs": "^4.0.4",
+    "typedarray-to-buffer": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
