--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
-  "name": "react-demo",
+  "name": "react-typescript-leaflet",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "buffer": "github:feross/buffer",
-    "jquery": "^3.7.1",
-    "jszip": "^3.10.1",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.67",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
     "leaflet": "^1.9.4",
-    "leaflet-draw": "^1.0.4",
-    "leaflet-geoserver-request": "^1.3.0",
-    "leaflet-omnivore": "^0.3.4",
-    "leaflet-providers": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
-    "serve": "^14.2.1",
-    "shpjs": "^4.0.4",
-    "typedarray-to-buffer": "^4.0.0",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.8"
   }
 }
